# PDA

./: CMakeLists.txt  README.md  buildasm.sh  fst.cpp  fst.h  main.cpp  pda.pro
Exception/: exception.cpp  exception.h  information_exception.cpp  information_exception.h  not_found_exception.cpp  not_found_exception.h  params_exception.cpp  params_exception.h  source_exception.cpp  source_exception.h
Transducer/: expressiontoken.cpp  expressiontoken.h  fst.h  generator.cpp  generator.h  mfst.h  preprocessor.cpp  preprocessor.h  storefst.h  tokenizer.cpp  tokenizer.h
Utils/: defaults.cpp  defaults.h  misc.cpp  misc.h  settings.cpp  settings.h
